# quantel

./: .gitignore  CMakeLists.txt  INSTALL  KEYWORDS  README  README.md  TODO  environment.yml  install.sh  plot_orb_dens.sh  setup.py  test_UPS.py  tups.py  tutorial.ipynb
Notes/: LandscapeNotes.tex
Report/: MCSCF_LSP.bib  MCSCF_LSP.tex
Slide/: SlideMCSCF_LSP.tex  commands.tex  two-step-process.tex
calcs/formaldehyde/: NOTES  quest_geom_2.txt
calcs/formaldehyde/geometries/: liic_formaldehyde.xyz
calcs/formaldehyde/test/: gmf_csf.py  sub.sh
cmake/: FindGMP.cmake  SetupArmadillo.cmake  SetupOpenMP.cmake  VerifyBoost.cmake
conda-recipe/: build.sh  meta.yaml
examples/: casci.py  ccsd.py  eri.py  esmf.py  factorised_NOCI_density.py  fci.py  fci_dipole.py  fcidump  fcidump_scf.py  get_mo.py  guga_utils.py  h2_hf.py  h6.xyz  log.txt  mo_coeff  mo_integrals.py  newlog.txt  ob_table_array.py  ppp_fcidump.py  rhf.py  run-tups.py  ss-casscf.py  t2_amp  tb_table_array.py  test.py  test2.py  test_4array.py  test_AB2.py  test_IPcis.py  test_array.py  test_basin_hopping.py  test_casscf.py  test_configuration.py  test_csf.py  test_csf_disco.py  test_det.py  test_df_jk.py  test_diis.py  test_doublet.py  test_esmf.py  (+18 more)
examples/Fe2S2_lowspin_csf/avas_guess/: mol.in  reference.out
examples/Fe2S2_lowspin_csf/rohf_guess/: mol.in  mol.xyz  reference.out
examples/GMF_tests/: gmf_csf.py  gmf_rhf.py  gmf_uhf.py  test_oneGMFcsf.py
examples/MOM_tests/: mom_ghf.py  mom_rhf.py  mom_uhf.py
examples/cpp_tests/: test  test.cpp
examples/esmf/c2h4_6-31g/: c2h4_6-31.in  c2h4_6-31.xyz
examples/esmf/ch2_6-31g/: 0001.energy  0001.mat_ci  0001.mo_coeff  0002.energy  0002.mat_ci  0002.mo_coeff  0003.energy  0003.mat_ci  0003.mo_coeff  0004.mat_ci  0004.mo_coeff  0005.mat_ci  0005.mo_coeff  0006.mat_ci  0006.mo_coeff  0007.mat_ci  0007.mo_coeff  0008.mat_ci  0008.mo_coeff  0009.mat_ci  ch2.in  (+5 more)
examples/fci_testing/: supex_fcidump  supex_fcidump.py  test_fcidump.py  twosite_hubb_fcidump
examples/h2_orbs/: h2_hf.py  orbs_h2_hf.py
examples/mol/: acetaldehyde.xyz  allyl.xyz  aniline.xyz  formaldehyde.xyz  formaldehyde2.xyz  h2.xyz  h2o.xyz  h3.xyz  h3_linear.xyz  h4.xyz  h6.xyz  h8.xyz  hf.xyz  n2.xyz  o2.xyz  o2p.xyz  o3.xyz
examples/my_tests/: test_osc_strength.py  test_sorting_shells.py
examples/n2_1.5_daniel/: README  bo2.energy  bo2x.mo_coeff  config.txt  loc
examples/test_ab2/: ab2_rhf.py  smushed_ab2_rhf.py  vmd_commands.txt
examples/test_mp2/: test_mp2.py  testing.py
exelsis/: main.py  sa-casscf.py  search_csf.py
exelsis/drivers/: __init__.py  analyse.py  ci_guess.py  evlinesearch.py  from_file.py  noci.py  random_search.py
exelsis/io/: config.py
exelsis/wfn/: csf.py  esmf.py  pcid.py  ss_casscf.py  wavefunction.py
pySCF/: GettingFamiliar.py  NR_CASSCF.py  README.txt  analyze_result.py  cas_noci.py
pySCF/gnme/: utils.py
qland/: main.py  sa-casscf.py  search_csf.py
qland/drivers/: analyse.py  ci_guess.py  from_file.py
qland/gnme/: cas_noci.py
qland/io/: config.py  parser.py
qland/wfn/: csf.py  esmf.py  pp.py  ss_casscf.py
quantel/: __init__.py  main.py
quantel/drivers/: __init__.py  analyse.py  auto_hybridlinesearch.py  ci_guess.py  evlinesearch.py  following_fromfile.py  from_core.py  from_file.py  from_orca.py  ladder_from_file.py  network_search.py  noci.py  rand_from_file.py  random_search.py  standard_guess.py
quantel/gnme/: __init__.py  analysis_utils.py  cas_noci.py  csf_noci.py  esmf_noci.py  notes_csf_noci.py  uhf_noci.py  utils.py  write_noci_results.py
quantel/ints/: fcidump_integrals.py  pyscf_integrals.py  utils.py
quantel/io/: config.py  parser.py
quantel/opt/: NOTES  basin_hopping.py  csf_disco.py  davidson.py  diis.py  eigenvector_following.py  function.py  gmf.py  hybrid_ef.py  lbfgs.py  line_search.py  linear.py  lsr1.py  mode_controlling.py  old_diis.py  test_function.py  test_gmf.py  trust_radius.py
quantel/utils/: ab2_orbitals.py  ci_utils.py  csf_utils.py  guga.py  linalg.py  notes_csf_utils.py  orbital_guess.py  orbital_utils.py  scf_utils.py  uhf_utils.py
quantel/wfn/: cisolver.py  csf.py  esmf.py  ghf.py  notes_cisolver.py  notes_csf.py  pp.py  rhf.py  roks.py  ss_casscf.py  uhf.py  wavefunction.py
src/: NR_CASSCF.py  PES.py  analyse.py  bindings.cpp  ci_expansion.cpp  ci_expansion.h  ci_space.cpp  ci_space.h  ci_space2.cpp  ci_space2.h  configuration.cpp  configuration.h  csf.py  csf_ci_space.cpp  csf_ci_space.h  determinant.cpp  determinant.h  diff.diff  drt.cpp  drt.h  esmf.py  excitation.h  fcidump_interface.cpp  fcidump_interface.h  four_array.h  four_index_array.h  h2R05.xyz  h2_config.txt  hubbard_interface.h  integral_interface.cpp  integral_interface.h  libint_interface.cpp  libint_interface.h  libint_jk_direct.cpp  libint_jk_incore.cpp  linalg.cpp  linalg.h  lookup_table.cpp  lookup_table.h  matrix_element_calculator.cpp  (+30 more)
src/csfs/: CSFConstructor.py  GeneralisedSlaterCondon.py  Integrals.py  RDM_Generic.py  RDM_Orthonormal.py  csf.py  old_RDM_Generic.py
src/gnme/: csf_noci.py  utils.py
src/notes/: notes_determinant.cpp  notes_determinant.h  test  test.cpp  test_lookup_tables  test_lookup_tables.cpp
src/opt/: eigenvector_following.py  mode_controlling.py  newton_raphson.py  trust_radius.py
src/orbitals/: h2_r10_sb_mo1.cube.pov  mol.pov  vmdscene.ps
src/quantel/: bindings.cc  test.cpp  test.h
tmp/drivers/: from_file.py
tmp/gnme/: pcid_noci.py
tmp/graveyard/: analyse.py
tmp/opt/: trust_radius.py
tmp/wfn/: ss_casscf.py
xesla/: README.txt  analyse.py  csf.py  drivers.py  main.py  plot_orb_dens.sh  scan_esmf.py  search.py  search_csf.py  search_esmf.py  search_pcid.py  ss_casscf.py  test.py
xesla/drivers/: __init__.py  analyse.py  ci_guess.py  from_file.py  noci.py  random_search.py
xesla/gnme/: cas_noci.py  esmf_noci.py  wick.py
xesla/graveyard/: analyze_result.py
xesla/io/: config.py  parser.py
xesla/opt/: __init__.py  eigenvector_following.py  function.py  newton_raphson.py
xesla/utils/: linalg.py
xesla/wfn/: csf.py  esmf.py  pcid.py  pp.py  ss_casscf.py  wavefunction.py
(+154 files in other folders)
